# smart-cache-rs

./: CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  rustfmt.toml
.github/workflows/: build.yml
crates/smart-cache/: Cargo.toml
crates/smart-cache-macro/: Cargo.toml
crates/smart-cache-macro/src/: lib.rs
crates/smart-cache-macro/tests/: tests.rs
crates/smart-cache-macro/tests/compile-fail/: mutable_ref.stderr
crates/smart-cache-macro/tests/success/: ref.rs
crates/smart-cache/src/: lib.rs
crates/smart-cache/tests/: something.rs  tests.rs
crates/smart-cache/tests/compile-fail/: mutable_ref.rs
crates/smart-cache/tests/success/: basic.rs  ref.rs  unit_string.rs
