[package]
name = "smart-cache-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for smart-cache"
documentation = "https://docs.rs/smart-cache-macro"
keywords = ["cache", "macro", "proc-macro"]
categories = ["caching", "development-tools"]

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
sha2.workspace = true
