[package]
name = "smart-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A smart caching library for Rust with automatic invalidation"
documentation = "https://docs.rs/smart-cache"
keywords = ["cache", "caching", "persistence", "database"]
categories = ["caching", "database"]

[dependencies]
smart-cache-macro = { version = "0.2.0", path = "../smart-cache-macro" }
redb.workspace = true
eyre.workspace = true
once_cell.workspace = true
tracing.workspace = true
dirs.workspace = true

[dev-dependencies]
rkyv = { workspace = true }
